--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ h1 {
 
   <div class="badge">🔥 TRENDING TODAY</div>
 
-  <h1>This Video Is Going Viral 😱</h1>
+  <h1>Wonder where she at… 😱</h1>
   <div class="sub">Tap the button below to watch the full video</div>
 
-  <a href="https://t.co/QK5tYnvFAl" class="cta">
+  <a href="https://videys.online/v/?id=mcuQx0n01" class="cta">
     ▶️ PLAY VIDEO NOW
   </a>
 
@@ -138,4 +138,5 @@ h1 {
 
 </body>
 </html>
+
 
